--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -26,6 +26,9 @@
                 border-bottom: 1px solid white;
                 margin-top: 4%;
                 width: 31vw;
+                p{
+                    font-size: 1vw; 
+                }
             }
             .nav-item{
                 list-style-type: none;
@@ -34,6 +37,11 @@
                 font-size: 1.1vw; 
                 font-family: 'Inter', sans-serif;
                 font-weight: 200;
+                transition:color 1s ease;
+                &:hover{
+                    color: rgb(119, 92, 50);
+                }
+               
             }
           
         }
@@ -45,11 +53,16 @@
             }
         
     }
+    .mobile-logo{
+        display: none;
+    }
     button{
         border: none;
         background: none;
-        font-size: 30px;
+        font-size: 35px;
         cursor: pointer;
+        color: rgb(235, 222, 206);
+        
     }
     .mobile-menu-icon{
         display: none;
@@ -62,58 +75,74 @@
       height: 12vh;
       display: flex;
       align-items: center;
+      justify-content: center;
       background-color: hsla(0, 45%, 94%, 0.055);
       position: relative;
-      
-      .navbar {  
-        .nav-links {
-          display: flex;
-          align-items: center;
-          .nav-box{
-            display: none;
-          }
-          
-          img {
-            width: 27vw;
+      .mobile-logo{
+        display:flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        margin: 0 ;
+        top: 0;
+        left: 40%;
+        img{
+            width: 20vw;
             height: 12vh;
-            margin-left: 0;
-            z-index: 9999;
-          }
-          p {
-            display: none;
-          }
         }
-    }
-        .nav-links-mobile{
-          .nav-box {
-            position: absolute;
-            list-style: none;
-            left: 0;
-            top: 100%;
-            transition: all 0.5s ease-in-out;
-            width: 100vw;
-            background-color: rgb(31, 30, 30);
-            margin: 0;
-            padding-left: 0;
-            padding-top: 4%;
-            height: 40vh;
-            flex-direction: column; /* Ensure mobile menu items are stacked vertically */
-          }
-          .nav-item {
-            color: white;
-            font-size: 1vh;
-            padding-bottom: 35px;
-            width: 100%;
-            transition: all 0.5s ease-in-out;
-            text-align: center; /* Center-align menu items */
-          }
-         
       }
+      .mobile-menu-icon {
+        position: absolute;
+        display: flex;
+        right: 15%;
+      }
+      .navbar{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100vw;
+        height: 100vh;
+        margin-top: 24vh;
+        left: 0;
+        right: 0;
       
-    }
-    .mobile-menu-icon {
-        display: absolute;
+      .nav-links{
+        display: none;
       }
+      .nav-links-mobile{
+        display: flex;
+        flex-direction: column;
+        list-style-type: none;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        right: 0;
+        .nav-logo{
+         display: none;
+        
+        }
+        .nav-box{
+            width: 100vw;
+            height: 100vh;
+            gap: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            background-color: rgb(240, 240, 240);
+            color: rgb(49, 40, 10);
+            font-weight: 500;
+            p{
+                display: none;
+            }
+            .nav-item{
+                padding: 5%;
+            }
+        }
+      }
+    }
+     
+    }
     
   }
   
