--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -125,3 +125,28 @@
       }
     
 }
+
+@media only screen and (max-width: 767px) {
+    .home-container{
+    .heading{
+        width: 100%;
+        p{
+            font-size: 15.8vw;
+        }
+
+        .heading-text{
+          
+            .top-items{
+                p{
+                    font-size: 4vw;
+                }
+                .icon{
+                    padding-right: 5px;
+                    font-size: 3.7vw;
+                }
+                
+            }
+        }
+    }
+}
+}
