--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,10 @@
-.App {
-  text-align: center;
+body{
+  background-color: #e6e6e6;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+ 
 }
 .wrapper{
-  width: 100vw;
+  width: 100%;
 }
