--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -8,6 +8,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 5%;
     .footer-content{
         width: 90%;
         height: 70%;
