--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -1,7 +1,10 @@
 @import 'variables';
 @import 'mixins';
+.home{
+    width: 100%;
+   
 .home-container{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-image: url(../assets/headings/home-landing.jpg);
     background-repeat: no-repeat;
@@ -69,6 +72,7 @@
         animation: scrolldown-anim 2s infinite;
         box-sizing: border-box;
         box-shadow: 0px -5px 3px 1px #ffffff66;
+        cursor: pointer;
       }
       
       @keyframes scrolldown-anim {
@@ -125,7 +129,98 @@
       }
     
 }
+    .intro-container{
+        width: 80vw;
+        height: 120vh;
+        margin: 3% auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        .intro-container-text{
+            display: flex;
+            width: 55vw;
+            height: 30vh;
+            flex-direction: column;
+            text-align: center;
+            justify-content: center;
+            margin: 1% auto;
+            gap: 0;
+            position: relative;
+            h2{
+                margin-top: -4%;
+            }
+            p{
+                margin-top: -4%;
+                width: 100%;
+            }
+        }
+        .intro-container-links{
+            width: 80%;
+            height: 60%;
+            display: grid;
+            margin: 0 auto;
+            grid-template-areas:
+            "a  b"
+            "a  c";
+            gap: 2%;
+            .intro-item{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                transition: transform 0.4s ease-in-out;
+                overflow: hidden;
+                text-decoration: none;
+                cursor: pointer;
+                &:hover {
+                    transform: scale(1.1);
+                  }
+                h3{
+                 color: #fff;
+                 font-size: 2vw;
+                 font-family: 'Inria Serif';
+                 font-weight: 300;
+                 margin-top: -5%;
+                
+                }
+                h4{
+                    color: #d4d4d4;
+                    font-size: 1vw;
+                    text-transform: uppercase;
+                    font-family: 'Inria Serif';
+                    font-weight: 300;
+                    
+                }
+    
+            }
+            .intro-exterior{
+                grid-area: a;
+                background-image: url(../assets/home/exterior-link.jpg);
+                @include bg-rules;  
+                
+            }
+            .intro-neigh{
+                grid-area: b;
+                background-image: url(../assets/home/neigh-link.jpg);
+                @include bg-rules; 
+                height: 95%;
+            }
+            .intro-interior{
+                grid-area: c;
+                background-image: url(../assets/home/interior-link.jpg);
+                @include bg-rules; 
+               
+            }
+        }
+}
 
+}
+
+
+
+/* 
+RESPONSIVE */
 @media only screen and (max-width: 767px) {
     .home-container{
     .heading{
