--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -2,7 +2,7 @@
 .navigation-container{
     background-color: transparent;
     height: 26vh;
-    width: 98%;
+    width: 96%;
     display: flex;
     z-index: 99999;
     align-items: center;
@@ -12,7 +12,7 @@
    
     .navbar{
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: center; 
         margin-top: 2%;
         .nav-links{
@@ -28,6 +28,7 @@
                 width: 31vw;
                 p{
                     font-size: 1vw; 
+                    color: rgb(233, 229, 229);
                 }
             }
             .nav-item{
@@ -49,7 +50,7 @@
                 width: 12vw;
                 height: 22vh;
                 cursor: pointer;
-                margin: 0 6vw;
+                margin: 0 5vw;
             }
         
     }
