--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,34 @@
 @import 'navbar';
 @import 'home';
 @import 'footer';
+
+
+
+::-webkit-scrollbar {
+    width: 10px; 
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #dbc795; 
+    border-radius: 5px; 
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: rgb(255, 255, 255); 
+  }
+  @media (max-width: 768px) {
+    .scrollable-container {
+      overflow: hidden;
+    }
+  }
+  
+  h3{
+    @include font-style('h3')
+}
+h2{
+    @include font-style('h2')
+}
+
+p{
+    @include font-style('p')
+}
