--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -251,7 +251,7 @@ RESPONSIVE */
     margin-top: 0;
     padding: 0;
     width: 95vw;
-    height: 90vh;
+    height: 120vh;
  /*    border: 1px solid red; */
     display: flex;
     flex-direction: column;
@@ -259,11 +259,12 @@ RESPONSIVE */
     .intro-container-text{
         width: 100%;
         height: 20%;
-        margin-top: -20%;
+        margin-top: -15%;
         padding: 0;
       /*   border: 1px solid red; */
         text-align: center;
        h3{
+        width: 100%;
         font-size: 5vw;
        }
        h2{
