--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -251,7 +251,7 @@ RESPONSIVE */
     margin-top: 0;
     padding: 0;
     width: 95vw;
-    height: 120vh;
+    height: 130vh;
  /*    border: 1px solid red; */
     display: flex;
     flex-direction: column;
@@ -259,7 +259,7 @@ RESPONSIVE */
     .intro-container-text{
         width: 100%;
         height: 20%;
-        margin-top: -15%;
+        margin-top: -35%;
         padding: 0;
       /*   border: 1px solid red; */
         text-align: center;
@@ -276,18 +276,22 @@ RESPONSIVE */
     }
     .intro-container-links{
         width: 100%;
-        margin-top: 5%;
+        margin-top: 2%;
        /*  border: 1px solid red; */
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
-        gap: 0;
+        gap: 3%;
         .intro-item{
             width: 100%;
-            height: 30%;
+            height: 30vh;
             h3{
-                margin-top: 0;
+                margin-top: -2%;
+                font-size: 4vw;
+            }
+            h4{
+                font-size: 2vw;
             }
         }
     }
