--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -73,3 +73,80 @@
         color: #a09b94;
     }
 }
+
+@media only screen and (max-width: 767px){
+    .footer-container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 100vh;
+        width: 100%;
+        text-align: center;
+        margin-top: 0;
+       
+        .footer-content {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            max-width: 80%;
+            height: 90%;
+            /* margin-top: -35%; */
+            gap: 20px;
+            padding: 20px;
+            p{
+                font-size: 5vw;
+            }
+            .footer-navigation{
+                width: 50%;
+                margin-left: 0;
+
+                p{
+                    margin-left: 0;
+                }
+                .footer-nav{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    width: fit-content;
+                    .footer-nav-item{
+                        font-size: 3vw;
+                        padding-bottom: 10%;
+                    }
+                }
+            }
+            .footer-contact {
+                text-align: left;
+                width: 70%;
+                    p{
+                        margin: 0 auto;
+                    }
+                    .contact-list{
+
+                        .contact-list-item{
+                            font-size: 3vw;
+                            padding-bottom: 10%;
+                        }
+                    }
+                
+            }
+            .footer-logo{
+                margin-top: 0;
+                order: -1;
+                width: fit-content;
+                img {
+                    width: 32vw;
+                    height: 25vh;
+                   
+                  }
+            }
+           
+            
+           
+          }
+          
+         
+
+    }
+    
+   
+}
