--- a/src/styles/_counter.scss
+++ b/src/styles/_counter.scss
@@ -34,13 +34,14 @@
     @media only screen and (max-width: 767px){
         .counter-container{
             width: 100%;
-            height: 45vh;
+            height: 49vh;
             background-color: #212121;
             display: flex;
             flex-direction: column;
             align-items: center;
             gap: 1%;
-            margin-bottom: 2%;
+            margin-top: -15%;
+            margin-bottom: 7%;
            
                 .counter-item{
                     height: 70%;
