--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -214,6 +214,42 @@
             }
         }
 }
+.overview-container{
+    width: 70%;
+    height: 74vh;
+    margin: 5% auto;
+    display: flex;
+    align-items: center;
+    padding: 2%;
+    gap: 3%;
+    .overview-item{
+        width: 100%;
+        height: 100%;
+      
+    }
+    #image{
+       /*  border-radius: 30px; */
+        background-image: url(../assets/home/overview.webp);
+        @include bg-rules;
+    }
+    #text-block{
+        text-align: left;
+        border-right: 2px solid rgb(170, 158, 126);
+        border-bottom: 2px solid rgb(170, 158, 126);
+        padding: 2%;
+       h3{
+        margin-top: -1.5%;
+       }
+       h2{
+        margin-top: -7%;
+       }
+       p{
+        margin-top: -9%;
+        line-height: 150%;
+       }
+      
+    }
+}
 
 }
 
@@ -296,5 +332,43 @@ RESPONSIVE */
         }
     }
 }
+.overview-container{
+     width: 85%;
+     height: 63vh;
+     margin: 5% auto;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     gap: 3%;
+     .overview-item{
+      
+       
+     }
+     #image{
+        width: 60%;
+        order: 1;
+     }
+     #text-block{
+        text-align: center;
+        border-right: none;
+        border-bottom: none;
+       h3{
+        margin: 0;
+        font-size: 4vw;
+       }
+       h2{
+        margin: 0;
+        font-size: 5vw;
+       }
+       p{
+        margin: 0;
+        line-height: 150%;
+        font-size: 3vw;
+       }
+      
+    }
+     
+ }
 }
+
 }
