--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -251,6 +251,34 @@
     }
 }
 
+.map-container{
+    width: 100%;
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: -5%  auto 10% auto;
+    .map-headings{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+        width: 50%;
+        h3{
+            font-size: 1.4vw;
+            margin-top: -5%;
+            color: #583b20;
+            margin-bottom: 4%;
+          
+          }
+
+    }
+    
+
+
+}
+
 }
 
 
