--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -173,6 +173,7 @@
                     }
                 }
                 button[type="submit"]{
+                    border-radius: 10px;
                     width: 50vw;
                     height: 4.5vh;
                     margin: 2% auto;
