--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -393,6 +393,21 @@ RESPONSIVE */
     }
      
  }
+ .map-container{
+    width: 100%;
+    height: 30vh;
+    margin: 5% auto;
+    .map-headings{
+        width: 100%;
+        h3{
+            margin-top: -3%;
+            font-size: 2.5vw;
+        }
+    }
+   
+
+
+ }
 }
 
 }
