--- a/src/styles/_map.scss
+++ b/src/styles/_map.scss
@@ -8,3 +8,10 @@
     height: 100%;
     background-color: wheat;
 }
+
+@media only screen and (max-width: 767px){
+    .map{
+        width: 100%;
+        height: 20vh;
+    }
+}
