--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -1,20 +1,11 @@
 @import 'variables';
 @import 'mixins';
 .home{
-    width: 100%;
+    /* width: 100%; */
    
-.home-container{
-    width: 100%;
-    height: 100vh;
-    background-image: url(../assets/headings/home-landing.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    z-index: -1;
-    margin-top: -26vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.landing-container{
+   /*  @include langing-page-rules; */
+    background-image: url(../assets/landings/home-landing.jpg);
     .heading{
         display: flex;
         align-items: center;
@@ -251,7 +242,7 @@
     }
 }
 
-.map-container{
+.map-section{
     width: 100%;
     height: 80vh;
     display: flex;
@@ -278,6 +269,27 @@
 
 
 }
+.offer-section{
+    width: 80vw;
+    height: 80vh;
+    background-color: red;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .offer-heading{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 20%;
+        width: fit-content;
+        border: 1px solid black;
+        margin-top: -2%;
+        h2{
+            margin-top: -10%;
+        }
+    }
+}
 
 }
 
@@ -287,8 +299,9 @@
 RESPONSIVE */
 @media only screen and (max-width: 767px) {
     .home{
-    .home-container{
+    .landing-container{
         width: 100%;
+        height: 100vh;
     .heading{
         width: 100%;
         p{
@@ -393,7 +406,7 @@ RESPONSIVE */
     }
      
  }
- .map-container{
+ .map-section{
     width: 100%;
     height: 40vh;
     margin: 5% auto;
