--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -12,3 +12,16 @@
     background-size: 100%;
     background-position: center ;
   }
+  @mixin langing-page-rules{
+    width: 100%;
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    z-index: -1;
+    margin-top: -26vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
