--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 @import 'mixins';
 .home{
-    /* width: 100%; */
+    width: 100%;
    
 .landing-container{
    /*  @include langing-page-rules; */
