--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,6 +19,12 @@
 @media only screen and (max-width: 767px){
   .landing-container{
     margin-top: -12vh;
+    .heading{
+      h1{
+        font-size: 14vw;
+      }
+      
+    }
   }
 }
 
