--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -7,7 +7,7 @@
     h1{
         @include font-style('heading');
     }
-    
+
     }
     .contact-info-container{
         width: 80%;
@@ -58,9 +58,62 @@
                             margin-top: -4%;
                         }
                     }
-                
-                
-            
+        }
+    }
+}
+@media only screen and (max-width: 767px){
+    .contact{
+        .contact-info-container{
+            width: 100%;
+            height: 60vh;
+            display: flex;
+            flex-direction: column;
+            margin: 0 auto;
+            .container-item{
+                height: 50%;
+                align-items: center;
+            }
+            #map{
+                width: 100%;
+            }
+            #info{
+                width: 70%;
+                height: fit-content;
+
+                .text-block{
+                    align-items: center;
+                    text-align: center;
+                    margin-top: 0;
+                    h3{
+                       /*  margin-top: -0.5%; */
+                        font-size: 2.4vw;
+                    }
+                    h2{
+                        /* margin-top: -2.5%; */
+                        font-size: 5vw;
+                    }
+                    p{
+                        width: 100%;
+                        font-size: 2vw;
+                        margin-top: -2%;
+                    }
+                }
+                .socials{
+                    height: fit-content;
+                    margin-top: 1vh;
+                    width: 45%;
+                    .icon{
+                        font-size: 2.5vw;
+                        /* margin-right: 2%;
+                        padding-top: 2%; */
+                        
+                    }
+                    p{
+                        font-size: 2.4vw;
+                       /*  margin-top: -4%; */
+                    }
+                }
+            }
         }
     }
 }
