--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -122,6 +122,9 @@
          display: none;
         
         }
+        button{
+            display: none;
+        }
         .nav-box{
             width: 100vw;
             height: fit-content;
