--- a/src/styles/_building-page.scss
+++ b/src/styles/_building-page.scss
@@ -7,6 +7,92 @@
         h1{
             @include font-style('heading');
         }
-       
     }
+    .intro-container{
+        height: fit-content;
+        width: 80%;
+        margin: 2% auto 0 auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        border-bottom: 2px solid rgb(83, 59, 7);
+        h2{
+            margin-top: -2%;
+        }
+
+        p{
+            width: 70%;
+            margin-top: -2%;
+        }
+    }
+    .parallax{
+        width: 95vw;
+        height: 65vh;
+        margin: 0 auto 5% auto;
+        top: 0;
+        box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.3);
+        .parallax-container{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            
+            h2{
+                /* font-weight: 00; */
+                font-style: italic;
+            }
+        }
+    }
+    .team{
+        width: 90%;
+        margin: 0 auto;
+        height: fit-content;
+        background-image: url(../assets/logo.png);
+        background-repeat: no-repeat;
+        background-position: center;
+        
+        /* background-size: cover; */
+        #architect {
+            .text-block{
+                text-align: right; 
+                   
+            }
+        }
+        .workers{
+            width: 85vw;
+            height: 65vh;
+            margin: 5% auto;
+            display: flex;
+            gap: 5%;
+         
+            .text-block{
+                width: 55%;
+                height: 100%;
+                h3{
+                    margin-top: -0.5%;
+                }
+                h2{
+                    margin-top: -5%;
+                }
+                p{
+                    /* width: 90%; */
+                    margin-top: -2%;
+                    line-height: 170%;
+                }
+            }
+            .image{
+                width: 45%;
+                height: 100%;
+                @include bg-rules;
+                background-size: cover;
+                box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+            }
+            
+           
+           
+        }
+    }
+   
 }
