--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -27,7 +27,8 @@
         }
         #form{
             
-            width: 35%;
+            width: 30%;
+            height: 90%;
             .form-container{
                 background-color: transparent;
                 width: 100%;
@@ -53,7 +54,7 @@
                                 gap: 10%;
                                 margin-bottom: 3vh; 
                                 input[type="text"]{
-                                    height: 5vh;
+                                    height: 4.7vh;
                                     border: 2px solid #443A2C;
                                     background-color: #EEECE6;
                                 }
@@ -62,7 +63,7 @@
                             input[type="email"],
                             /* input[type="text"], */
                             textarea {
-                              height: 5vh;
+                              height: 4.7vh;
                               width: 96%;
                               margin-bottom: 3vh; 
                               padding: 0.6vw;
@@ -73,7 +74,7 @@
                                 height: 31vh;
                             }
                             button[type="submit"]{
-                               height: 7.5vh;
+                               height: 7.2vh;
                                background-color: #6c5d43;
                             }
                         }
@@ -133,15 +134,33 @@
         background-color: antiquewhite;
       
     }
+    .follow-us-container{
+        width: 99%;
+        height: 55vh;
+        margin: 5% auto;
+        border: 1px solid red;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        .text-block{
+        height: fit-content;
+        h2{
+            margin-top: -5%;
+        }
+        
+          
+        }
+    }
 }
 @media only screen and (max-width: 767px){
     .contact{
         .contact-info-container{
             width: 100%;
-            height: 122vh;
+            height: 120vh;
             display: flex;
             flex-direction: column;
-            margin: 5% auto;
+            padding-top: 10vh;
             gap: 0;
             .container-item{
                 height: 50%;
@@ -152,40 +171,41 @@
                 height: 20vh;
             }
             #info{
-                width: 70%;
+                width: 90%;
                 height: fit-content;
                 margin-top: -40%;
 
                 .text-block{
                     align-items: center;
                     text-align: center;
-                    margin-top: 0;
+                    margin-top: 6.25vh;
                     h3{
                        /*  margin-top: -0.5%; */
-                        font-size: 2.4vw;
+                        font-size: 2.6vw;
                     }
                     h2{
                         /* margin-top: -2.5%; */
-                        font-size: 5vw;
+                        font-size: 5.2vw;
                     }
                     p{
                         width: 100%;
-                        font-size: 2vw;
+                        font-size: 4vw;
                         margin-top: -2%;
                     }
                 }
                 .socials{
                     height: fit-content;
-                    margin-top: 2vh;
+                    margin-top: 3vh;
                     width: 100%;
+                    /* align-items: center; */
                     .icon{
-                        font-size: 2.5vw;
+                        font-size: 2.9vw;
                         /* margin-right: 2%;
                         padding-top: 2%; */
                         
                     }
                     p{
-                        font-size: 2.4vw;
+                        font-size: 3vw;
                        /*  margin-top: -4%; */
                     }
                 }
