--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -79,12 +79,14 @@
                 align-items: center;
                 justify-content: center;
                 transition: transform 0.4s ease-in-out;
+                box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
                 overflow: hidden;
                 text-decoration: none;
                 cursor: pointer;
                 &:hover {
                     transform: scale(1.1);
                   }
+
                 h3{
                  color: #fff;
                  font-size: 2vw;
