--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,7 @@
 
 .landing-container{
   @include langing-page-rules;
+  box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.5);
   .heading{
     @include heading-rules;
   }
@@ -31,6 +32,8 @@
     }
   }
 }
+
+
 
 ::-webkit-scrollbar {
     width: 10px; 
