--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -2,6 +2,7 @@
 @import 'mixins';
 
 .contact{
+    background:  #161616;
     .landing-container{
     background-image: url(../assets/landings/contact-landing.jpg);
     h1{
@@ -12,18 +13,23 @@
     .contact-info-container{
         width: 100%;
         height: 82vh;
-        margin: 0 auto 2% auto;
+        margin: 0 auto ;
         display: flex;
         flex-direction: row;
         align-items: center;
         justify-content: center;
         gap: 5%;
-        background: linear-gradient(to bottom, #EEECE6, #e6e6e6);
+        /* background: linear-gradient(to bottom, #EEECE6, #e6e6e6); */
         padding-top: 5%;
-
+        padding-bottom: 2%;
         .container-item{
             width: 35%;
             height: 100%;
+            .text-block{
+                h3{
+                    color: rgb(189, 189, 189);
+                }
+            }
         }
         #form{
             
@@ -56,7 +62,7 @@
                                 input[type="text"]{
                                     height: 4.7vh;
                                     border: 2px solid #443A2C;
-                                    background-color: #EEECE6;
+                                    /* background-color: #EEECE6; */
                                 }
                             }
                             input[type="tel"],
@@ -68,14 +74,15 @@
                               margin-bottom: 3vh; 
                               padding: 0.6vw;
                               border: 2px solid #443A2C;
-                              background-color: #EEECE6;
+                              /* background-color: #EEECE6; */
                             }
                             textarea{
                                 height: 31vh;
                             }
                             button[type="submit"]{
                                height: 7.2vh;
-                               background-color: #6c5d43;
+                               font-weight: 100;
+                             
                             }
                         }
                         
@@ -130,15 +137,15 @@
     .map-container{
         width: 100%;
         height: 55vh;
-        margin: 5% auto;
+        margin: 0 auto;
         background-color: antiquewhite;
       
     }
     .follow-us-container{
         width: 99%;
-        height: 55vh;
-        margin: 5% auto;
-        border: 1px solid red;
+        height: 70vh;
+        margin: 0% auto;
+       /*  border: 1px solid red; */
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -147,9 +154,29 @@
         height: fit-content;
         h2{
             margin-top: -5%;
+        } 
         }
-        
-          
+        .links-container{
+            width: 100%;
+            height: 60%;
+            /* border: 1px solid red; */
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            .item{
+                height: 90%;
+                width: 20vw;
+                border: 1px solid #6c5d43;
+                border-radius: 10px;
+                @include bg-rules;
+                background-size: cover;
+                transition: transform 0.4s ease-in-out;
+                box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+                cursor: pointer;
+                &:hover {
+                    transform: scale(1.1);
+                  }
+            }
         }
     }
 }
