--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -121,6 +121,7 @@
         display: flex;
         flex-direction: column;
         height: 90vh;
+        font-family: 'Courier New', Courier, monospace;
        .container-content{
         display: flex;
         flex-direction: column;
@@ -163,6 +164,7 @@
         .contact-form-container{
             width: 85vw;
             margin-top: 5%;
+            
             form{
                 margin: 3% 1%;
                 .name-inputs{
@@ -170,6 +172,7 @@
                     flex-direction: column;
                     input[type="text"]{
                         width: 91%;
+                        
                     }
                 }
                 button[type="submit"]{
