--- a/src/styles/_amenities.scss
+++ b/src/styles/_amenities.scss
@@ -9,4 +9,144 @@
         }
         
     }
+    .intro-container{
+        width: 90vw;
+        height: 60vh;
+        border: 1px solid red;
+        margin: 5% auto;
+        display: flex;
+        flex-direction: row;
+        gap: 5%;
+        .container{
+            width: 100%;
+            height: 100%;
+            border: 1px solid blue;
+            
+        }
+        #first-section-img{
+            @include bg-rules;
+            background-size: cover;
+        }
+        #text-block{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin: 0 auto;
+            h2{
+                margin-top: -5%;
+            }
+            p{
+                text-align: center;
+                margin-top: -3%;
+            }
+        }
+    }
+    .design-container{
+        width: 100%;
+        height: 70vh;
+        background-color: rgb(203, 189, 170);
+        margin: 5% auto;
+        @include bg-rules;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        p{
+            width: 60%;
+            text-align: center;
+        }
+        h2{
+            margin-top: -2%;
+        }
+        p{
+            margin-top: -1%;
+        }
+    }
+    .community-container{
+        width: 90vw;
+        height: 70vh;
+        border: 1px solid red;
+        margin: 5% auto;
+        display: flex;
+        flex-direction: row;
+        gap: 5%;
+        .container{
+            width: 50%;
+            height: 100%;
+            border: 1px solid blue;
+        }
+        #community-container-img{
+            @include bg-rules;
+            background-size: cover;
+        }
+        #text-block{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin: 0 auto;
+            h2{
+                margin-top: -5%;
+            }
+            p{
+                text-align: center;
+                margin-top: -3%;
+            }
+        }
+    }
+    .smarthouse-container{
+        width: 100%;
+        height: 65vh;
+        background-color: #120F0B;
+        margin: 5% auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+        .text-block{
+            text-align: center;
+            margin-top: 1%;
+            h2{
+                margin-top: -1.5%;
+            }
+            p{
+                width: 70%;
+                margin: -1% auto 0 auto;
+            }
+            
+        }
+        .icons-box{
+            width: 100%;
+            height: 27%;
+            margin-top: 5%;
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            gap: 2%;
+            .icons-item{
+                display: flex;
+                align-items: center;
+                justify-content: space-around;
+                height: 95%;
+                width: 9%;
+                border-radius: 28px;
+                background-color: #D0C7B5;
+                box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+                
+            .icon{
+                height: 70%;
+                width: 60%;
+               
+              
+            }
+            }
+        }
+    }
+    .roof-container{
+        width: 90%;
+        height: 75vh;
+        border: 1px solid blue;
+        margin: 10% auto;
+    }
 }
