--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -168,7 +168,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: -5%  auto 10% auto;
+    margin: 0  auto 0 auto;
     .map-headings{
         display: flex;
         flex-direction: column;
