--- a/src/styles/_amenities.scss
+++ b/src/styles/_amenities.scss
@@ -12,7 +12,6 @@
     .intro-container{
         width: 90vw;
         height: 60vh;
-        border: 1px solid red;
         margin: 5% auto;
         display: flex;
         flex-direction: row;
@@ -20,7 +19,6 @@
         .container{
             width: 100%;
             height: 100%;
-            border: 1px solid blue;
             
         }
         #first-section-img{
@@ -44,7 +42,7 @@
     }
     .design-container{
         width: 100%;
-        height: 70vh;
+        height: 75vh;
         background-color: rgb(203, 189, 170);
         margin: 5% auto;
         @include bg-rules;
@@ -66,7 +64,6 @@
     .community-container{
         width: 90vw;
         height: 70vh;
-        border: 1px solid red;
         margin: 5% auto;
         display: flex;
         flex-direction: row;
@@ -74,7 +71,6 @@
         .container{
             width: 50%;
             height: 100%;
-            border: 1px solid blue;
         }
         #community-container-img{
             @include bg-rules;
@@ -133,6 +129,12 @@
                 border-radius: 28px;
                 background-color: #D0C7B5;
                 box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+                transition: transform 0.4s ease-in-out;
+                overflow: hidden;
+                cursor: pointer;
+                &:hover {
+                    transform: scale(1.1);
+                  }
                 
             .icon{
                 height: 70%;
@@ -145,8 +147,59 @@
     }
     .roof-container{
         width: 90%;
-        height: 75vh;
-        border: 1px solid blue;
-        margin: 10% auto;
+        height: 100vh;
+        margin: 5% auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        h2{
+            margin-top: -1.8%;
+        }
+        p{
+            width: 60%;
+            margin: -2% auto 0 auto;
+        }
+        .container-items{
+            width: 75%;
+            height: 62%;
+            display: grid;
+            margin: 2% auto 0 auto;
+            grid-template-areas:
+            "a  b"
+            "a  c";
+            gap: 2%;
+            .item{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                transition: transform 0.4s ease-in-out;
+                box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+                overflow: hidden;
+                text-decoration: none;
+                cursor: pointer;
+                &:hover {
+                    transform: scale(1.1);
+                  }
+    
+            }
+            .item-first{
+                grid-area: a;
+                @include bg-rules;  
+                background-size: cover;
+                
+            }
+            .item-second{
+                grid-area: b;
+                @include bg-rules; 
+                height: 95%;
+            }
+            .item-third{
+                grid-area: c;
+                @include bg-rules; 
+               
+            }
+        }
     }
 }
