--- a/src/styles/_gallery-page.scss
+++ b/src/styles/_gallery-page.scss
@@ -8,4 +8,52 @@
                 @include font-style('heading');
             }
     }
+    /* ImageGallery.css */
+
+.image-gallery {
+    text-align: center;
+    padding: 20px;
+    height: max-content;
+    width: 80%;
+    margin: 5% auto 15% auto;
+    .category-buttons {
+      
+        margin: 1% 2% 4% auto;
+        button {
+            margin-left: 4%;
+            padding: 10px;
+            background-color: transparent;
+            color: #fff;
+            border: none;
+            cursor: pointer;
+            font-size: 1.8vw;
+            color: #DCBB65;
+            font-weight: 300;
+            font-family: 'Inria Serif'; 
+            text-transform: uppercase;
+            transition: color 0.5s ease-in;
+            &:hover{
+                color: #4B4545,
+            }
+          }
+      }
+      .gallery-items {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(20vw, 1fr));
+        grid-auto-rows: 30vh;
+        gap: 3%;
+        .item {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: transform 0.4s ease-in-out;
+            overflow: hidden;
+            cursor: pointer;
+            &:hover {
+                transform: scale(1.1);
+              }
+          }
+      }
+  }
+  
 }
