--- a/src/styles/_apartments-page.scss
+++ b/src/styles/_apartments-page.scss
@@ -9,4 +9,148 @@
         }
        
     }
+    .apartments-container{
+        width: 90%;
+        height: 95vh;
+        margin: 1% auto 10% auto;
+        border: 1px solid blue;
+        display: flex;
+        flex-direction: column;
+       
+        .apartments-nav{
+            width: 100%;
+            height: 14%;
+            border-bottom: 1px solid red;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            justify-content: center;
+            .nav{
+                display: flex;
+                align-items: center;
+                width: 80%;
+                
+                ul{
+                    width: 100%;
+                    display: flex;
+                    list-style-type: none;
+                    gap: 5%;
+                    font-size: 1.5vw;
+                    text-transform: uppercase;
+                    font-family: 'Cormorant SC';
+                    font-weight: 600;
+                    li{
+                        transition:  0.4s ease-in;
+                        cursor: pointer;
+                        &:hover{
+                            color: burlywood;
+                            border-bottom: 1px solid rgb(77, 58, 3);
+                        }
+                    }
+                }
+            }
+            button{
+                height: 50%;
+                width: 17%;
+                margin: 0 auto;
+                border-radius: 10px;
+                background:#967647;
+                border: none;
+                color: white;
+                font-size: 1.3vw;
+                cursor: pointer;
+            }
+        }
+       
+    }
+    .apartments-box{
+        width: 100%;
+        height: 80%;
+        border: 1px solid purple;
+        margin: 3% auto;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        gap: 3%;
+        .ap-showoff{
+            height: 100%;
+            width: 60%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            border: 1px solid pink;
+            .ap-imgs{
+                width: 100%;
+                height: 90%;
+                border: 1px solid olivedrab;
+            }
+            .ap-nav{
+                width: 50%;
+                height: 10%;
+                background-color: green;
+                display: flex;
+                justify-content: space-around;
+                button{
+                    color: #443A2C;
+                    border: none;
+                    background-color: transparent;
+                    font-size: 1.2vw;
+                    font-weight: 600;
+                    cursor: pointer;
+                }
+            }
+        }
+        .ap-info{
+            height: 100%;
+            width: 40%;
+            border: 1px solid orange;
+            .info-content{
+                height: 90%;
+                width: 90%;
+                border: 1px solid #967647;
+                h3{
+                    color: #443A2C;
+                }
+                ul{
+                    width: 60%;
+                    height: 40%;
+                    list-style-type: none;
+                    border-bottom: 1px solid rgb(112, 82, 5);
+                    border-top: 1px solid rgb(112, 82, 5);
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-around;
+                    li{
+                        font-size: 1.2vw;
+                        font-family: "Inter";
+                        font-weight: 500;
+                        margin-left: -10%;
+                        span{
+                            color: #c5c514;
+                            margin-left: 2%;
+                        }
+                    }
+                }
+                p{
+                    width: 70%;
+                    line-height: 140%;
+                }
+                .buttons{
+                    display: flex;
+                    gap: 3%;
+                    button{
+                        border: none;
+                        background:#967647;
+                        font-size: 1.1vw;
+                        height: 5.1vh;
+                        color: rgb(235, 233, 233);
+                        cursor: pointer;
+                        font-weight: 100;
+                    }
+                }
+            }
+        }
+    }
 }
