--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,7 @@
 @import 'gallery-page';
 @import 'building-page';
 @import 'scroll-button';
+@import 'calculator';
 
 .landing-container{
   @include langing-page-rules;
