--- a/src/styles/_apartments-page.scss
+++ b/src/styles/_apartments-page.scss
@@ -88,11 +88,21 @@
                 .content{
                     width: 95%;
                     height: 95%;
-                    background-color: pink;
+                    border: 1px solid orange;
                     margin: 1% auto;
-                    .content-item{
-                        /* align-items: ; */
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    .floorplan{
+                        /* height: 95%; */
+                        /* width: 85%; */
+                        margin: 0 auto;
+                        /* contain: content; */
                     }
+                    .gallery{
+                        width: 90%;
+                        height: 90%;
+                    } 
                 }
             }
             .ap-nav{
@@ -161,6 +171,47 @@
                     }
                 }
             }
+        }
+    }
+    .calculator-container{
+        width: 70%;
+        height: 70vh;
+        margin: 5% auto;
+        background-color: rgba(68, 58, 44, 0.06);
+        padding: 2%;
+        .heading{
+            height: 30%;
+            width: 60%;
+            
+            h3{
+                margin-top: -0.8%;
+                text-transform: uppercase;
+                font-size: 1.3vw;
+                color: #967647;
+                font-family: 'Inter';
+                font-weight: 800;
+            }
+            h2{
+                margin-top: -2.7%;
+            }
+        }
+        .container{
+            width: 100%;
+            height: 70%;
+            
+           /*  display: flex;
+            flex-direction: row;
+            gap: 2%; */
+            /* .calculator{
+                width: 100%;
+                height: 100%;
+                border: 1px solid  purple;
+            }
+            .bank{
+                width: 100%;
+                height: 100%;
+                background: #E4DED4;
+            } */
         }
     }
 }
