--- a/src/styles/_apartments-page.scss
+++ b/src/styles/_apartments-page.scss
@@ -108,7 +108,7 @@
             .ap-nav{
                 width: 50%;
                 height: 10%;
-                background-color: rgb(162, 234, 162);
+                border: 1px solid cornflowerblue;
                 display: flex;
                 justify-content: space-around;
                 button{
