--- a/src/styles/_calculator.scss
+++ b/src/styles/_calculator.scss
@@ -82,6 +82,12 @@
                     p{
                         font-size: 1.4vw;
                     }
+                    .label{
+                        position: absolute;
+                    }
+                    .value{
+                        margin-top: -20%;
+                    }
                 }
                 .info{
                     width: 100%;
